# cpp-baremetal-senders-and-receivers

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: asciidoctor-ghpages.yml  unit_tests.yml
docs/: attributes.adoc  cancellation.adoc  completion_signatures.adoc  concepts.adoc  customizing.adoc  debug.adoc  environments.adoc  errors.adoc  external.adoc  index.adoc  intro.adoc  pipes.adoc  schedulers.adoc  sender_adaptors.adoc  sender_consumers.adoc  sender_factories.adoc  senders.adoc  synopsis.adoc  variant_senders.adoc
include/async/: allocator.hpp  completes_synchronously.hpp  completion_scheduler.hpp  completion_tags.hpp  compose.hpp  concepts.hpp  connect.hpp  continue_on.hpp  debug.hpp  debug_context.hpp  env.hpp  forwarding_query.hpp  get_completion_scheduler.hpp  get_completion_signatures.hpp  get_scheduler.hpp  incite_on.hpp  inline_scheduler.hpp  into_variant.hpp  just.hpp  just_result_of.hpp  let.hpp  let_error.hpp  let_stopped.hpp  let_value.hpp  on.hpp  periodic.hpp  read.hpp  read_env.hpp  repeat.hpp  retry.hpp  sequence.hpp  split.hpp  stack_allocator.hpp  start.hpp  start_detached.hpp  start_on.hpp  static_allocator.hpp  stop_token.hpp  sync_wait.hpp  tags.hpp  (+9 more)
include/async/detail/: freestanding.hpp
include/async/schedulers/: get_expiration.hpp  inline_scheduler.hpp  priority_scheduler.hpp  requeue_policy.hpp  runloop_scheduler.hpp  task.hpp  task_manager.hpp  task_manager_interface.hpp  thread_scheduler.hpp  time_scheduler.hpp  timer_manager.hpp  timer_manager_interface.hpp  trigger_manager.hpp  trigger_scheduler.hpp
test/: CMakeLists.txt  allocator.cpp  completes_synchronously.cpp  concepts.cpp  continue_on.cpp  debug.cpp  debug_context.cpp  env.cpp  forwarding_query.cpp  freestanding_sync_wait.cpp  hosted_sync_wait.cpp  incite_on.cpp  inline_scheduler.cpp  into_variant.cpp  just.cpp  just_error.cpp  just_error_result_of.cpp  just_result_of.cpp  just_stopped.cpp  let_error.cpp  let_multichannel.cpp  let_stopped.cpp  let_value.cpp  on.cpp  periodic.cpp  read.cpp  read_env.cpp  repeat.cpp  retry.cpp  runloop_scheduler.cpp  sequence.cpp  split.cpp  start_detached.cpp  start_on.cpp  stop_token.cpp  then.cpp  then_each.cpp  then_error.cpp  thread_scheduler.cpp  timeout_after.cpp  (+8 more)
test/detail/: common.hpp  debug_handler.hpp
test/fail/: CMakeLists.txt  incite_on_multiple_completions.cpp  incite_on_synchronous_scheduler.cpp  incite_on_without_function.cpp  just_connect.cpp  just_error_connect.cpp  just_error_result_of_connect.cpp  just_result_of_connect.cpp  just_stopped_connect.cpp  read_env_connect.cpp  read_env_sync_wait.cpp  repeat_compose.cpp  retry_compose.cpp  sequence_connect.cpp  split_connect.cpp  sync_wait_multiple_completions.cpp  then_connect.cpp  timeout_after_error.cpp  timeout_after_stopped.cpp  when_all_multiple_completions.cpp  when_any_uncompleteable.cpp  when_any_unstoppable.cpp
test/schedulers/: CMakeLists.txt  inline_scheduler.cpp  priority_scheduler.cpp  runloop_scheduler.cpp  std_time_scheduler.cpp  task_manager.cpp  thread_scheduler.cpp  time_scheduler.cpp  timer_manager.cpp  trigger_scheduler.cpp
test/schedulers/fail/: CMakeLists.txt  exceed_priority.cpp  inline_scheduler_connect.cpp  no_time_point_for_spec.cpp  priority_scheduler_connect.cpp  runloop_scheduler_connect.cpp  task_invalid_bound_args.cpp  thread_scheduler_connect.cpp  time_scheduler_connect.cpp  wrong_duration_type.cpp
usage_test/: CMakeLists.txt  main.cpp
