[project]
name = "intel-cpp-baremetal-senders-and-receivers"
version = "0.0.1"
requires-python = ">=3.12"
dependencies = [
  "intel-cicd-repo-infrastructure"
]
license = "BSL-1.0"

[project.urls]
Repository = "https://github.com/intel/cpp-baremetal-senders-and-receivers/"
Documentation = "https://intel.github.io/cpp-baremetal-senders-and-receivers/"

[tool.setuptools]
packages = []

[tool.uv.sources]
intel-cicd-repo-infrastructure = { git = "https://github.com/intel/cicd-repo-infrastructure", branch = "dev" }
